# rust_linalg_bench

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: lib.rs  macros.rs
benches/assets/: add20.mtx
benches/linalg/: cholesky.rs  eigen.rs  full_piv_lu.rs  hessenberg.rs  inverse.rs  lu.rs  lu_solve.rs  mod.rs  qr.rs  schur.rs  svd.rs  symmetric_eigen.rs
benches/lowdim/: inverse.rs  mod.rs  product.rs
benches/sparse/: mod.rs  ops.rs
