[package]
name = "linalg_bench"
version = "0.1.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]

[dependencies]
nalgebra        = { version = "*", features = [ "debug" ] }
nalgebra-lapack = { version = "*" }
rulinalg        = { version = "*", git = "https://github.com/sebcrozet/rulinalg" }
rand            = "*"
cgmath          = { version = "*", features = [ "simd" ] }
ndarray         = "0.9"
linxal          = { version = "*", features = [ "openblas" ] }
ndarray-linalg  = { version = "*", features = [ "openblas" ] }
